antlr4-runtime/simpleCParser.py
# Generated from simpleC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class simpleCParser ( Parser ):

    grammarFileName = "simpleC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'>'", "'('", "')'", 
                     "'{'", "'}'", "','", "'='", "';'", "'['", "']'", "'if'", 
                     "'else'", "'while'", "'for'", "'return'", "'!'", "'*'", 
                     "'/'", "'%'", "'+'", "'-'", "'=='", "'!='", "'<='", 
                     "'>='", "'int'", "'double'", "'char'", "'string'", 
                     "'strlen'", "'atoi'", "'printf'", "'scanf'", "'&'", 
                     "'gets'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "INT", "DOUBLE", "CHAR", 
                      "STRING", "LIB", "Conjunction", "Operator", "LineComment", 
                      "BlockComment", "WS" ]

    RULE_prog = 0
    RULE_include = 1
    RULE_function = 2
    RULE_params = 3
    RULE_param = 4
    RULE_funcBody = 5
    RULE_body = 6
    RULE_block = 7
    RULE_initialBlock = 8
    RULE_arrayInitBlock = 9
    RULE_arrayNoInitBlock = 10
    RULE_assignBlock = 11
    RULE_ifBlocks = 12
    RULE_ifBlock = 13
    RULE_elifBlock = 14
    RULE_elseBlock = 15
    RULE_condition = 16
    RULE_whileBlock = 17
    RULE_forBlock = 18
    RULE_returnBlock = 19
    RULE_expr = 20
    RULE_mType = 21
    RULE_arrayItem = 22
    RULE_func = 23
    RULE_strlenFunc = 24
    RULE_atoiFunc = 25
    RULE_printfFunc = 26
    RULE_scanfFunc = 27
    RULE_getsFunc = 28
    RULE_selfDefinedFunc = 29
    RULE_argument = 30
    RULE_mID = 31
    RULE_mINT = 32
    RULE_mCHAR = 33
    RULE_mDOUBLE = 34
    RULE_mSTRING = 35
    RULE_mLIB = 36

    ruleNames =  [ "prog", "include", "function", "params", "param", "funcBody", 
                   "body", "block", "initialBlock", "arrayInitBlock", "arrayNoInitBlock", 
                   "assignBlock", "ifBlocks", "ifBlock", "elifBlock", "elseBlock", 
                   "condition", "whileBlock", "forBlock", "returnBlock", 
                   "expr", "mType", "arrayItem", "func", "strlenFunc", "atoiFunc", 
                   "printfFunc", "scanfFunc", "getsFunc", "selfDefinedFunc", 
                   "argument", "mID", "mINT", "mCHAR", "mDOUBLE", "mSTRING", 
                   "mLIB" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    ID=38
    INT=39
    DOUBLE=40
    CHAR=41
    STRING=42
    LIB=43
    Conjunction=44
    Operator=45
    LineComment=46
    BlockComment=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.IncludeContext)
            else:
                return self.getTypedRuleContext(simpleCParser.IncludeContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.FunctionContext)
            else:
                return self.getTypedRuleContext(simpleCParser.FunctionContext,i)


        def getRuleIndex(self):
            return simpleCParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = simpleCParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==simpleCParser.T__0:
                self.state = 74
                self.include()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simpleCParser.T__27) | (1 << simpleCParser.T__28) | (1 << simpleCParser.T__29) | (1 << simpleCParser.T__30))) != 0):
                self.state = 80
                self.function()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mLIB(self):
            return self.getTypedRuleContext(simpleCParser.MLIBContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = simpleCParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(simpleCParser.T__0)
            self.state = 87
            self.match(simpleCParser.T__1)
            self.state = 88
            self.mLIB()
            self.state = 89
            self.match(simpleCParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(simpleCParser.MTypeContext,0)


        def mID(self):
            return self.getTypedRuleContext(simpleCParser.MIDContext,0)


        def params(self):
            return self.getTypedRuleContext(simpleCParser.ParamsContext,0)


        def funcBody(self):
            return self.getTypedRuleContext(simpleCParser.FuncBodyContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = simpleCParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.mType()
            self.state = 92
            self.mID()
            self.state = 93
            self.match(simpleCParser.T__3)
            self.state = 94
            self.params()
            self.state = 95
            self.match(simpleCParser.T__4)
            self.state = 96
            self.match(simpleCParser.T__5)
            self.state = 97
            self.funcBody()
            self.state = 98
            self.match(simpleCParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.ParamContext)
            else:
                return self.getTypedRuleContext(simpleCParser.ParamContext,i)


        def getRuleIndex(self):
            return simpleCParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = simpleCParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [simpleCParser.T__27, simpleCParser.T__28, simpleCParser.T__29, simpleCParser.T__30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.param()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==simpleCParser.T__7:
                    self.state = 101
                    self.match(simpleCParser.T__7)
                    self.state = 102
                    self.param()
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [simpleCParser.T__4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(simpleCParser.MTypeContext,0)


        def mID(self):
            return self.getTypedRuleContext(simpleCParser.MIDContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = simpleCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.mType()
            self.state = 112
            self.mID()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(simpleCParser.BodyContext,0)


        def returnBlock(self):
            return self.getTypedRuleContext(simpleCParser.ReturnBlockContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncBody" ):
                return visitor.visitFuncBody(self)
            else:
                return visitor.visitChildren(self)




    def funcBody(self):

        localctx = simpleCParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.body()
            self.state = 115
            self.returnBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.BlockContext)
            else:
                return self.getTypedRuleContext(simpleCParser.BlockContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.FuncContext)
            else:
                return self.getTypedRuleContext(simpleCParser.FuncContext,i)


        def getRuleIndex(self):
            return simpleCParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = simpleCParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simpleCParser.T__12) | (1 << simpleCParser.T__14) | (1 << simpleCParser.T__27) | (1 << simpleCParser.T__28) | (1 << simpleCParser.T__29) | (1 << simpleCParser.T__30) | (1 << simpleCParser.T__31) | (1 << simpleCParser.T__32) | (1 << simpleCParser.T__33) | (1 << simpleCParser.T__34) | (1 << simpleCParser.ID))) != 0):
                self.state = 119
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [simpleCParser.T__12, simpleCParser.T__14, simpleCParser.T__27, simpleCParser.T__28, simpleCParser.T__29, simpleCParser.T__30, simpleCParser.ID]:
                    self.state = 117
                    self.block()
                    pass
                elif token in [simpleCParser.T__31, simpleCParser.T__32, simpleCParser.T__33, simpleCParser.T__34]:
                    self.state = 118
                    self.func()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initialBlock(self):
            return self.getTypedRuleContext(simpleCParser.InitialBlockContext,0)


        def arrayInitBlock(self):
            return self.getTypedRuleContext(simpleCParser.ArrayInitBlockContext,0)


        def arrayNoInitBlock(self):
            return self.getTypedRuleContext(simpleCParser.ArrayNoInitBlockContext,0)


        def assignBlock(self):
            return self.getTypedRuleContext(simpleCParser.AssignBlockContext,0)


        def ifBlocks(self):
            return self.getTypedRuleContext(simpleCParser.IfBlocksContext,0)


        def whileBlock(self):
            return self.getTypedRuleContext(simpleCParser.WhileBlockContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = simpleCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.initialBlock()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.arrayInitBlock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.arrayNoInitBlock()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.assignBlock()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.ifBlocks()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.whileBlock()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(simpleCParser.MTypeContext,0)


        def mID(self):
            return self.getTypedRuleContext(simpleCParser.MIDContext,0)


        def expr(self):
            return self.getTypedRuleContext(simpleCParser.ExprContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_initialBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialBlock" ):
                listener.enterInitialBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialBlock" ):
                listener.exitInitialBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialBlock" ):
                return visitor.visitInitialBlock(self)
            else:
                return visitor.visitChildren(self)




    def initialBlock(self):

        localctx = simpleCParser.InitialBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initialBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.mType()
            self.state = 133
            self.mID()
            self.state = 134
            self.match(simpleCParser.T__8)
            self.state = 135
            self.expr(0)
            self.state = 136
            self.match(simpleCParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInitBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(simpleCParser.MTypeContext,0)


        def mID(self):
            return self.getTypedRuleContext(simpleCParser.MIDContext,0)


        def mINT(self):
            return self.getTypedRuleContext(simpleCParser.MINTContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_arrayInitBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayInitBlock" ):
                listener.enterArrayInitBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayInitBlock" ):
                listener.exitArrayInitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayInitBlock" ):
                return visitor.visitArrayInitBlock(self)
            else:
                return visitor.visitChildren(self)




    def arrayInitBlock(self):

        localctx = simpleCParser.ArrayInitBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayInitBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.mType()
            self.state = 139
            self.mID()
            self.state = 140
            self.match(simpleCParser.T__10)
            self.state = 141
            self.mINT()
            self.state = 142
            self.match(simpleCParser.T__11)
            self.state = 143
            self.match(simpleCParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayNoInitBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(simpleCParser.MTypeContext,0)


        def mID(self):
            return self.getTypedRuleContext(simpleCParser.MIDContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_arrayNoInitBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayNoInitBlock" ):
                listener.enterArrayNoInitBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayNoInitBlock" ):
                listener.exitArrayNoInitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayNoInitBlock" ):
                return visitor.visitArrayNoInitBlock(self)
            else:
                return visitor.visitChildren(self)




    def arrayNoInitBlock(self):

        localctx = simpleCParser.ArrayNoInitBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arrayNoInitBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.mType()
            self.state = 146
            self.mID()
            self.state = 147
            self.match(simpleCParser.T__10)
            self.state = 148
            self.match(simpleCParser.T__11)
            self.state = 149
            self.match(simpleCParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayItem(self):
            return self.getTypedRuleContext(simpleCParser.ArrayItemContext,0)


        def expr(self):
            return self.getTypedRuleContext(simpleCParser.ExprContext,0)


        def mID(self):
            return self.getTypedRuleContext(simpleCParser.MIDContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_assignBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignBlock" ):
                listener.enterAssignBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignBlock" ):
                listener.exitAssignBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignBlock" ):
                return visitor.visitAssignBlock(self)
            else:
                return visitor.visitChildren(self)




    def assignBlock(self):

        localctx = simpleCParser.AssignBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignBlock)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.arrayItem()
                self.state = 152
                self.match(simpleCParser.T__8)
                self.state = 153
                self.expr(0)
                self.state = 154
                self.match(simpleCParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.mID()
                self.state = 157
                self.match(simpleCParser.T__8)
                self.state = 158
                self.expr(0)
                self.state = 159
                self.match(simpleCParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlocksContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifBlock(self):
            return self.getTypedRuleContext(simpleCParser.IfBlockContext,0)


        def elifBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.ElifBlockContext)
            else:
                return self.getTypedRuleContext(simpleCParser.ElifBlockContext,i)


        def elseBlock(self):
            return self.getTypedRuleContext(simpleCParser.ElseBlockContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_ifBlocks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlocks" ):
                listener.enterIfBlocks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlocks" ):
                listener.exitIfBlocks(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBlocks" ):
                return visitor.visitIfBlocks(self)
            else:
                return visitor.visitChildren(self)




    def ifBlocks(self):

        localctx = simpleCParser.IfBlocksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifBlocks)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.ifBlock()
            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 164
                    self.elifBlock() 
                self.state = 169
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==simpleCParser.T__13:
                self.state = 170
                self.elseBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(simpleCParser.ConditionContext,0)


        def body(self):
            return self.getTypedRuleContext(simpleCParser.BodyContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_ifBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlock" ):
                listener.enterIfBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlock" ):
                listener.exitIfBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBlock" ):
                return visitor.visitIfBlock(self)
            else:
                return visitor.visitChildren(self)




    def ifBlock(self):
